2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_setup_window): Patch from Christian Persch
	<chpe@svn.gnome.org> to fix a memory leak (Closes: #423067)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_handle_key_press): Make pause actually
	pause, and stop pause as well (Closes: #422956)

2007-03-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_bus_message_cb):
	  No need to flood stdout with g_message()s if we find an unknown
	  GstMessage type on the bus (Closes: #420253).

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c: (totem_add_default_dirs), (totem_add_files),
	(xdg_user_dir_lookup): Use xdg-user-dirs to add some default
	directories to the "Open" dialogues (Closes: #143404)

2007-03-19  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (totem_action_add_recent): Avoid
	crashing on play when we can't get a display name
	for the file we're trying to play

2007-03-19  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am:
	* data/Makefile.am:
	* src/backend/Makefile.am: spaces cleanups by
	Loïc Minier <lool+gnome@via.ecp.fr> (Closes: #414173)

2007-03-19  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Fix build, remove the generation of
	help/uk/Makefile

2007-03-18  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_new):
	  Fix build when compiling against a GStreamer core version where the
	  debugging system has been disabled (Closes: 418589).

2007-03-16  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_error_msg), (bvw_bus_message_cb):
	(poll_for_state_change_full):
	  Make debug output on errors a bit more terse; also mention URI
	  that caused the error.

2007-03-12  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-menu.c: (about_action_callback):